display users count on login page

--- a/src/components/Chat/ChatUserCard/styles.scss
+++ b/src/components/Chat/ChatUserCard/styles.scss
@@ -12,6 +12,10 @@
     cursor: pointer;
     background-color: $main;
     color: $light;
+    .badge {
+      background-color: $light;
+      color: $main;
+    }
   }
   .badge {
     background-color: $main;
